--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=api-temperature-control
+
+#Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/temperature-control
+spring.datasource.username=postgres
+spring.datasource.password=ztxehokujo
+spring.datasource.driver-class-name=org.postgresql.Driver
