--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/temperature-control
 spring.datasource.username=postgres
 spring.datasource.password=ztxehokujo
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=ztxehokujo
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=meuCertificado
