--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/temperature-control
 spring.datasource.username=postgres
 spring.datasource.password=ztxehokujo
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+api.security.token.secret=my-secret-token-key
