--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=ztxehokujo
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 api.security.token.secret=my-secret-token-key
+
+logging.level.org.springframework.security=DEBUG
